[package]
name = "libocc"
version = "0.1.3"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/libocc-rs"
homepage = "https://github.com/Bernd-L/libocc-rs#readme"
readme = "README.md"
documentation = "https://docs.rs/libocc"
description = "A library for occasionally connected computing"
include = ["/README.md", "/LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multihash = "0.13.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
