[package]
name = "libocc"
version = "0.5.0"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/libocc-rs"
homepage = "https://github.com/Bernd-L/libocc-rs#readme"
readme = "README.md"
documentation = "https://docs.rs/libocc"
description = "A library for occasionally connected computing"
include = ["/README.md", "/LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multihash = "0.14.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
petgraph = "0.6.0"


[dev-dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1"
